--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-cufflinks==0.17.3
 dash==1.9.1
 dash-core-components==1.8.1
 dash-html-components==1.0.2
@@ -7,9 +6,10 @@ dash-table==4.6.1
 dask==2.5.2
 Flask==1.1.1
 Flask-Compress==1.4.0
-gunicorn==20.0.4
+gunicorn
 numpy==1.16.5
 pandas==0.25.1
 plotly==4.5.4
 requests==2.21.0
 datetime
+Werkzeug==0.15.0
