--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-dash==1.9.1
-dash-core-components==1.8.1
-dash-html-components==1.0.2
-dash-renderer==1.2.4
-dash-table==4.6.1
-dask==2.5.2
-Flask==1.1.1
-Flask-Compress==1.4.0
+dash
+dash-core-components
+dash-html-components
+dash-bootstrap-components
+dash-renderer
+dash-table
+dask
+Flask
+Flask-Compress
 gunicorn
-numpy==1.16.5
-pandas==0.25.1
-plotly==4.5.4
-requests==2.21.0
+numpy
+pandas
+plotly
+plotly-express
 datetime
-Werkzeug==0.15.0
